Fix new aggregate menu icon container vertical spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,6 +86,7 @@
 
 .dashtopanelMainPanel.vertical .panel-button > *,
 .dashtopanelMainPanel.vertical .panel-button.vertical > *,
+.dashtopanelMainPanel.vertical .panel-button.vertical .system-status-icon,
 .dashtopanelMainPanel.vertical .panel-button.clock-display > *,
 .dashtopanelMainPanel.vertical .panel-button.clock-display .clock {
 	padding: 8px 0; 
